--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main">
+      <nav>
+        <span><img width="53" src="assets/logo.svg" alt="" /></span>
+        <div>
+          <button>English</button>
+          <button>Sign-In</button>
+        </div>
+      </nav>
+      <div class="box"></div>
+     <div class="hero">
+      <span> Unlimited movies,</span>
+      <span>shows, and more</span>
+      <span>Starts at ₹149. Cancel at any time.</span>
+       
+
+     </div>
+    </div>
+  </body>
+</html>
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Responsive</title>
     <link rel="stylesheet" href="style.css" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -20,4 +49,4 @@
       </div>
     </nav>
   </body>
-</html>
+</html> -->
