--- a/index.html
+++ b/index.html
@@ -1,52 +1,153 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="main">
-      <nav>
-        <span><img width="53" src="assets/logo.svg" alt="" /></span>
-        <div>
-          <button>English</button>
-          <button>Sign-In</button>
+    <!DOCTYPE html>
+    <html lang="en">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+
+    <body>
+
+        <div class="main">
+            <nav>
+                <span><img width="53" src="assets/logo.svg" alt=""></span>
+                <div>
+                    <button class="btn">English</button>
+                    <button class="btn btn-red-sm">Sign In</button>
+                </div>
+            </nav>
+            <div class="box">
+            </div>
+            <div class="hero">
+                <span>Unlimited movies,</span>
+                <span>Shows, and more</span>
+                <span>Ready to watch? Enter your email to create or restart your membership.</span>
+                <div class="hero-buttons">
+                    <input type="text" placeholder="Email Address">
+                    <button class="btn btn-red">Get Started &gt;</button>
+                </div>
+            </div>
+
+            <div class="separation"></div>
+            <section class="reasons">
+    <h2>More reasons to join</h2>
+
+    <div class="reason-cards">
+        <div class="card">
+            <h3>Enjoy on your TV</h3>
+            <p>
+                Watch on smart TVs, PlayStation, Xbox, Chromecast,
+                Apple TV, Blu-ray players and more.
+            </p>
+            <img src="assets/tv.png" alt="">
         </div>
-      </nav>
-      <div class="box"></div>
-     <div class="hero">
-      <span> Unlimited movies,</span>
-      <span>shows, and more</span>
-      <span>Starts at ₹149. Cancel at any time.</span>
-       
 
-     </div>
+        <div class="card">
+            <h3>Download your shows to watch offline</h3>
+            <p>
+                Save your favourites easily and always have something to watch.
+            </p>
+            <img src="assets/download.png" alt="">
+        </div>
+
+        <div class="card">
+            <h3>Watch everywhere</h3>
+            <p>
+                Stream unlimited movies and TV shows on your phone, tablet,
+                laptop and TV.
+            </p>
+            <img src="assets/watch.png" alt="">
+        </div>
+
+        <div class="card">
+            <h3>Create profiles for kids</h3>
+            <p>
+                Send kids on adventures with their favourite characters in a space
+                made just for them — free with your membership.
+            </p>
+            <img src="assets/kids.png" alt="">
+        </div>
     </div>
-  </body>
-</html>
+</section>
 
-<!-- <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive</title>
-    <link rel="stylesheet" href="style.css" />
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<div class="separation"></div>
 
-  </head>
-  <body>
-    <nav>
-      <div class="logo">CAT</div>
-      <div class="hamburger"><i class="fa-solid fa-cat"></i></div>
-      <div class="menu">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Service</a>
-        <a href="#">Contact</a>
-      </div>
-    </nav>
-  </body>
-</html> -->
+
+    
+        <div class="separation"></div>
+
+        <section class="faq">
+            <h2>Frequently Asked Questions</h2>
+            <div class="faqbox">
+                <span>What is NetFlix</span>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+            </div>
+            <div class="faqbox">
+                <span>How much does Netflix cost?</span>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+            </div>
+            <div class="faqbox">
+                <span>What can I watch on Netflix?</span>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+            </div>
+            <div class="faqbox">
+                <span>Where can I watch?</span>
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12 4V20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M4 12H20" stroke="#141B34" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+
+            </div>
+        </section>
+        <div class="separation"></div>
+
+        <footer>
+            <div class="questions">
+                Questions? Call 000-800-919-1694
+            </div>
+            <div class="footer">
+                <div class="footer-item"> 
+                    <a href="faq">Investor Relations</a>
+                    <a href="faq">Jobs</a>
+                    <a href="faq">Ways to Watch</a>
+                    <a href="faq">Terms of Use</a>
+                </div>
+
+                <div class="footer-item"> 
+                    <a href="faq">Help Centre</a>
+                    <a href="faq">Account</a>
+                    <a href="faq">Speed Test</a>
+                    <a href="faq">Legal Notices</a>
+                </div>
+                <div class="footer-item">
+                    <a href="faq">Media Centre</a>
+                    <a href="faq">Privacy</a>
+                    <a href="faq">Cookie Preferences</a> 
+                    <a href="faq">Corporate</a>
+                </div>
+
+                <div class="footer-item">
+                    <a href="faq">Contact Us</a>
+                    <a href="faq">Speed Test</a> 
+                    <a href="faq">Legal Notices</a> 
+                    <a href="faq">Only on Netflix</a>
+                </div>
+            </div>
+        </footer>
+    </body>
+
+    </html>
